--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <script src="Build/MEECSBUILD.loader.js"></script>
+    <script src="Build/Anatema.github.io.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/MEECSBUILD.data.gz",
-        frameworkUrl: "Build/MEECSBUILD.framework.js.gz",
-        codeUrl: "Build/MEECSBUILD.wasm.gz",
+        dataUrl: "Build/Anatema.github.io.data",
+        frameworkUrl: "Build/Anatema.github.io.framework.js",
+        codeUrl: "Build/Anatema.github.io.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "MEECS",
